@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.783 2011/03/20 11:19:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.784 2011/03/20 22:12:45 scarabeus Exp $
+
+  20 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> mplayer-9999.ebuild,
+  files/prepare_mplayer.sh:
+  Move to use libav in live mplayer ebuild and snapshot preparator.
 
   20 Mar 2011; Raúl Porcel <armin76@gentoo.org>
   mplayer-1.0_rc4_p20101114.ebuild:
